# PyShell-Lab

./: .gitignore  LICENSE  README.md  pyproject.toml  pyshell_lab_docs.md  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml
Schema/: README.md  command.schema.json  common.schema.json  config.schema.json  requirements-validation.txt  result.schema.json  session.schema.json
docs/: SCOPE.md
docs/adr/: 0001-cli-only.md  0002-posix-only.md  0003-no-subprocess-run.md  0004-separated-architecture.md  0005-builtins-in-parent.md  0006-pipelines.md  0007-redirection.md  0008-sigint.md  0009-background-jobs.md  0010-terminal-job-control-deferred.md  0011-execution-plan-deferred.md  0012-audit-log-deferred.md  0013-canonical-scope.md
examples/: command.example.json  demo.psh
src/pyshell_lab/: __init__.py  ast.py  builtins.py  config.py  errors.py  executor.py  expansion.py  history.py  jobs.py  lexer.py  main.py  parser.py  repl.py  signals.py  state.py
tests/: conftest.py  test_ast.py  test_builtins.py  test_builtins_extra.py  test_config.py  test_config_history_extra.py  test_coverage_boost.py  test_errors.py  test_executor.py  test_executor_posix_extra.py  test_executor_unit.py  test_expansion.py  test_history.py  test_init.py  test_jobs.py  test_jobs_extra.py  test_lexer.py  test_main.py  test_main_extra.py  test_parser.py  test_repl.py  test_repl_extra.py  test_signals.py  test_signals_extra.py  test_state.py
